--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/Navigation-Clean.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/popper.min.js"></script>
 </head>
 
 <body>
